fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
-html, body { 
+html,
+body {
   margin: 0;
   height: 100%;
   text-align: center;
   color: #fff;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   overflow: hidden;
 }
 
@@ -36,7 +37,6 @@ canvas {
 
 .adonisImg {
   height: 28px;
-  margin-right: 12px;
 }
 
 .button {
@@ -485,7 +485,9 @@ canvas {
   transform: translate(-50%, -50%);
   padding: 2em;
   color: rgb(194, 189, 181);
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 3px, rgba(0, 0, 0, 0.05) 0px 28px 23px -7px, rgba(0, 0, 0, 0.04) 0px 12px 12px -7px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 3px,
+    rgba(0, 0, 0, 0.05) 0px 28px 23px -7px,
+    rgba(0, 0, 0, 0.04) 0px 12px 12px -7px;
   outline-color: currentcolor;
   background-color: rgb(21, 23, 24);
 }
@@ -554,110 +556,122 @@ output {
   margin-bottom: auto;
 }
 #volume-slider::-webkit-slider-runnable-track {
-    background: rgba(0, 125, 181, 0.6);
+  background: rgba(0, 125, 181, 0.6);
 }
 #volume-slider::-moz-range-track {
-    background: rgba(0, 125, 181, 0.6);
+  background: rgba(0, 125, 181, 0.6);
 }
 #volume-slider::-ms-fill-upper {
-    background: rgba(0, 125, 181, 0.6);
+  background: rgba(0, 125, 181, 0.6);
 }
 #volume-slider::before {
-    width: 100%;
+  width: 100%;
 }
 
 input[type="range"] {
-    position: relative;
-    -webkit-appearance: none;
-    width: 48%;
-    margin: 0;
-    padding: 0;
-    height: 19px;
-    margin-left: 5px;
-    float: left;
-    outline: none;
+  position: relative;
+  -webkit-appearance: none;
+  width: 48%;
+  margin: 0;
+  padding: 0;
+  height: 19px;
+  margin-left: 5px;
+  float: left;
+  outline: none;
 }
 input[type="range"]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 3px;
-    cursor: pointer;
-    background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  background: linear-gradient(
+    to right,
+    rgba(0, 125, 181, 0.6) var(--buffered-width),
+    rgba(0, 125, 181, 0.2) var(--buffered-width)
+  );
 }
 input[type="range"]::before {
-    position: absolute;
-    content: "";
-    top: 8px;
-    left: 0;
-    width: var(--seek-before-width);
-    height: 3px;
-    background-color: #007db5;
-    cursor: pointer;
+  position: absolute;
+  content: "";
+  top: 8px;
+  left: 0;
+  width: var(--seek-before-width);
+  height: 3px;
+  background-color: #007db5;
+  cursor: pointer;
 }
 input[type="range"]::-webkit-slider-thumb {
-    position: relative;
-    -webkit-appearance: none;
-    box-sizing: content-box;
-    border: 1px solid #007db5;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    background-color: #fff;
-    cursor: pointer;
-    margin: -7px 0 0 0;
+  position: relative;
+  -webkit-appearance: none;
+  box-sizing: content-box;
+  border: 1px solid #007db5;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+  margin: -7px 0 0 0;
 }
 input[type="range"]:active::-webkit-slider-thumb {
-    transform: scale(1.2);
-    background: #007db5;
+  transform: scale(1.2);
+  background: #007db5;
 }
 input[type="range"]::-moz-range-track {
-    width: 100%;
-    height: 3px;
-    cursor: pointer;
-    background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  background: linear-gradient(
+    to right,
+    rgba(0, 125, 181, 0.6) var(--buffered-width),
+    rgba(0, 125, 181, 0.2) var(--buffered-width)
+  );
 }
 input[type="range"]::-moz-range-progress {
-    background-color: #007db5;
+  background-color: #007db5;
 }
 input[type="range"]::-moz-focus-outer {
-    border: 0;
+  border: 0;
 }
 input[type="range"]::-moz-range-thumb {
-    box-sizing: content-box;
-    border: 1px solid #007db5;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    background-color: #fff;
-    cursor: pointer;
+  box-sizing: content-box;
+  border: 1px solid #007db5;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
 }
 input[type="range"]:active::-moz-range-thumb {
-    transform: scale(1.2);
-    background: #007db5;
+  transform: scale(1.2);
+  background: #007db5;
 }
 input[type="range"]::-ms-track {
-    width: 100%;
-    height: 3px;
-    cursor: pointer;
-    background: transparent;
-    border: solid transparent;
-    color: transparent;
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  background: transparent;
+  border: solid transparent;
+  color: transparent;
 }
 input[type="range"]::-ms-fill-lower {
-    background-color: #007db5;
+  background-color: #007db5;
 }
 input[type="range"]::-ms-fill-upper {
-    background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+  background: linear-gradient(
+    to right,
+    rgba(0, 125, 181, 0.6) var(--buffered-width),
+    rgba(0, 125, 181, 0.2) var(--buffered-width)
+  );
 }
 input[type="range"]::-ms-thumb {
-    box-sizing: content-box;
-    border: 1px solid #007db5;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    background-color: #fff;
-    cursor: pointer;
+  box-sizing: content-box;
+  border: 1px solid #007db5;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
 }
 input[type="range"]:active::-ms-thumb {
-    transform: scale(1.2);
-    background: #007db5;
+  transform: scale(1.2);
+  background: #007db5;
 }
